<resources>
    <string name="app_name">Fitness_App_KP</string>
    <string name="start">START</string>
    <string name="cover_image">cover image</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_image">exercise image</string>
    <string name="end">END</string>
    <string name="done_image">done image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>