<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#212121"
        android:textSize="18sp"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/yes"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:id="@+id/yes_btn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:id="@+id/no_btn"/>
    </LinearLayout>
</LinearLayout>