<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:content=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cover_image"
        android:src="@drawable/workout_banner" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="22dp"
        android:gravity = "center"
        android:id="@+id/start_ll"
        android:background="@drawable/circular_color_border_ripple">

        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/start"
            android:textSize = "25sp"
            android:textStyle = "bold"
            android:textColor = "@color/purple_700" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation = "horizontal"
        android:gravity="center" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:layout_gravity = "center"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/circular_color_background"
                android:id="@+id/bmi_ll">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/calculator"
                android:textSize="22sp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>