<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        app:titleTextColor="@color/white"
        android:id="@+id/toolbar_exercise_activity" />

    <!-- REST LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/rest_view_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for"
            android:textColor="@color/purple_500"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_color_border">

            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:background="@drawable/circular_progress_grayish"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_color_background"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    tools:text="10"
                    android:id="@+id/timer_tv"/>

            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_exercise"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="#616161"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:text="@string/exercise_name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/next_exercise_tv"/>

    </LinearLayout>

    <!-- Exercise LinearLayout -->
    <LinearLayout
        android:id="@+id/exercise_view_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_exercise_activity"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/exercise_image"
            android:scaleType="fitStart"
            android:src="@drawable/plank" />

        <TextView
            android:id="@+id/exercise_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exercise_name"
            android:layout_marginTop="20dp"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/circular_color_border">

            <ProgressBar
                android:id="@+id/exercise_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_grayish"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_color_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/exercise_timer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="30" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_status_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>


</RelativeLayout>